node js server set up

--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -28,7 +28,7 @@
         "ethereumjs-util": "^7.1.5",
         "ethereumjs-wallet": "^1.0.2",
         "ethers": "^5.7.2",
-        "hardhat": "^2.12.1",
+        "hardhat": "^2.13.0",
         "hardhat-celo": "^0.0.3",
         "hardhat-deploy": "^0.11.19",
         "hardhat-gas-reporter": "^1.0.8",
@@ -43,6 +43,7 @@
         "@ethersproject/providers": "^5.7.2",
         "@openzeppelin/contracts": "^4.8.2",
         "@redstone-finance/evm-connector": "^0.0.15",
+        "express": "^4.18.2",
         "ganache": "^7.5.0",
         "source-map-support": "^0.5.21",
         "typescript": "^4.8.4",
